--- a/sonakshi.html
+++ b/sonakshi.html
@@ -40,7 +40,7 @@
     <p style="font-size: large; font-family: Baskerville; text-align: center"><i>Click Me</i></p>
 
 
-    <img id="myImage" onclick="changeImage()" src="/static/assets/sonakshi.png" width="250" height="250">
+    <img id="myImage" onclick="changeImage()" src="https://github.com/sonakshibhalla/tri2_turtles.github.io/blob/main/static/assets/sonakshi.png?raw=true" width="250" height="250">
 
     <script>
         function changeImage() {
