--- a/shreya.html
+++ b/shreya.html
@@ -1,4 +1,6 @@
 
+{% include navigation.html %}
+
 
     <title>Shreya</title>
     <body style="background-color: #EBF7FA;">
@@ -34,19 +36,29 @@
                 <input type="submit" class="button1" value="Greetings!">
             </form>
         </div>
-
-        <br>
+        <script>
+            // Function to change webpage background color
+            function changeBack(color){
+                document.body.style.background = color;
+            }
+        </script>
+        <div>
+            <label>Change Background:</label>
+            <button type="button" onclick="changeBack('seashell');">Pink</button>
+            <button type="button" onclick="changeBack('ivory');">Yellow</button>
+            <button type="button" onclick="changeBack('honeydew');">Mint</button>
+        </div>
         <p>
         </p>
         <p style="font-size: large; font-family: Baskerville; text-align: center"><i>Click Me</i></p>
 
-        <img id="myImage" onclick="changeImage()" src="https://github.com/sonakshibhalla/tri2_turtles.github.io/blob/main/static/assets/shreyaimages/shreya.png?raw=true" width="285" height="400">
+        <img id="myImage" onclick="changeImage()" src="/static/assets/shreyaimages/shreya.png" width="285" height="400">
 
         <script>
             function changeImage() {
                 var image = document.getElementById('myImage');
                 if (image.src.match("/static/assets/shreyaimages/shreya.png")) {
-                    image.src = "/static/assets/shreyaimages/shreyamask.png";
+                    image.src = "/static/assets/shreyaimages/shreyamaskk.png";
                 } else {
                     image.src = "/static/assets/shreyaimages/shreya.png";
                 }
@@ -55,7 +67,6 @@
     </div>
     <a href="{{url_for('dictionary')}}" class="button1" style="font-family: Baskerville;font-size: large; margin-left: 45%">Here is The API</a>
     <div style="text-align: center">
-        <br>
 
         <br>
         <a style="font-family: 'Baskerville'" href="https://docs.google.com/document/d/1kiNPT2VoJIwpsf-8tR-1t58_ihXYbHytcyO2m-8JxU0/edit?usp=sharing">My Journal</a>
