--- a/shreya.html
+++ b/shreya.html
@@ -1,6 +1,3 @@
-
-
-
     <title>Shreya</title>
     <body style="background-color: #EBF7FA;">
     <style>
@@ -35,29 +32,19 @@
                 <input type="submit" class="button1" value="Greetings!">
             </form>
         </div>
-        <script>
-            // Function to change webpage background color
-            function changeBack(color){
-                document.body.style.background = color;
-            }
-        </script>
-        <div>
-            <label>Change Background:</label>
-            <button type="button" onclick="changeBack('seashell');">Pink</button>
-            <button type="button" onclick="changeBack('ivory');">Yellow</button>
-            <button type="button" onclick="changeBack('honeydew');">Mint</button>
-        </div>
+
+        <br>
         <p>
         </p>
         <p style="font-size: large; font-family: Baskerville; text-align: center"><i>Click Me</i></p>
 
-        <img id="myImage" onclick="changeImage()" src="/static/assets/shreyaimages/shreya.png" width="285" height="400">
+        <img id="myImage" onclick="changeImage()" src="https://github.com/sonakshibhalla/tri2_turtles.github.io/blob/main/static/assets/shreyaimages/shreya.png?raw=true" width="285" height="400">
 
         <script>
             function changeImage() {
                 var image = document.getElementById('myImage');
                 if (image.src.match("/static/assets/shreyaimages/shreya.png")) {
-                    image.src = "/static/assets/shreyaimages/shreyamaskk.png";
+                    image.src = "/static/assets/shreyaimages/shreyamask.png";
                 } else {
                     image.src = "/static/assets/shreyaimages/shreya.png";
                 }
@@ -66,6 +53,7 @@
     </div>
     <a href="{{url_for('dictionary')}}" class="button1" style="font-family: Baskerville;font-size: large; margin-left: 45%">Here is The API</a>
     <div style="text-align: center">
+        <br>
 
         <br>
         <a style="font-family: 'Baskerville'" href="https://docs.google.com/document/d/1kiNPT2VoJIwpsf-8tR-1t58_ihXYbHytcyO2m-8JxU0/edit?usp=sharing">My Journal</a>
@@ -75,5 +63,3 @@
         <a style="font-family: 'Baskerville'" href="https://github.com/shreya-ahujaa">My GitHub Profile</a>
     </div>
     </body>
-
-
