--- a/shreya.html
+++ b/shreya.html
@@ -32,7 +32,18 @@
                 <input type="submit" class="button1" value="Greetings!">
             </form>
         </div>
-
+<script>
+            // Function to change webpage background color
+            function changeBack(color){
+                document.body.style.background = color;
+            }
+        </script>
+        <div>
+            <label>Change Background:</label>
+            <button type="button" onclick="changeBack('seashell');">Pink</button>
+            <button type="button" onclick="changeBack('ivory');">Yellow</button>
+            <button type="button" onclick="changeBack('honeydew');">Mint</button>
+        </div>
         <br>
         <p>
         </p>
